organização do html

--- a/index.html
+++ b/index.html
@@ -1,10 +1,24 @@
+<html lang="pt-br">
+<head>
+ <title>Aluraflix</title>
+ <link rel="stylesheet" href="style.css"/>
+</head>
+
 <body>
 
 <header>ALURAFLIX</header>
+
+<section>
+    <div></div>
 <h1>As Branquelas (White Chicks, 2004) - FGcast #259
+</h1>
 <p>#asbranquelas</p>
+</div>
 
 <iframe width="560" height="315" src="https://www.youtube.com/embed/rvYCn0_9ta8?si=io-cszm-dC8Gqi7F" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 
+</section>
 
 </body>
+
+</html>
