--- a/index.html
+++ b/index.html
@@ -13,8 +13,7 @@
 <h1>As Branquelas (White Chicks, 2004) - FGcast #259
 </h1>
 <p>#asbranquelas</p>
-</div>
-
+</div class="chamada-texto">
 <iframe width="560" height="315" src="https://www.youtube.com/embed/rvYCn0_9ta8?si=io-cszm-dC8Gqi7F" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 
 </section>
